[gd_scene load_steps=8 format=3 uid="uid://bhbl8x2a71h5j"]

[ext_resource type="Texture2D" uid="uid://dd7srtletq2dj" path="res://Assets/House/AssetSheet_Furniture.png" id="1_7gl8n"]
[ext_resource type="Script" uid="uid://di5ru074kh3jc" path="res://Scenes/Levels/moveable.gd" id="1_jhtxr"]
[ext_resource type="AudioStream" uid="uid://cdr5smyn4q13g" path="res://sounds/scrape.wav" id="3_o0m6x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_431iw"]
size = Vector2(92, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhtxr"]
size = Vector2(76, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o0m6x"]
size = Vector2(68, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6avcs"]
size = Vector2(12, 60)

[node name="Chair" type="Node2D"]
script = ExtResource("1_jhtxr")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("1_7gl8n")
region_enabled = true
region_rect = Rect2(16, 25, 23, 15)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_431iw")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_jhtxr")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, -26)
shape = SubResource("RectangleShape2D_o0m6x")
one_way_collision = true

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(40, 0)
shape = SubResource("RectangleShape2D_6avcs")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-40, 0)
shape = SubResource("RectangleShape2D_6avcs")

[node name="Scrape" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o0m6x")
volume_db = 15.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
